--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 certifi==2021.5.30
 charset-normalizer==2.0.3
+click==8.0.1
+click-plugins==1.1.1
+colorama==0.4.4
 idna==3.2
 prettytable==2.1.0
 requests==2.26.0
+shodan==1.25.0
 urllib3==1.26.6
 wcwidth==0.2.5
+XlsxWriter==1.4.4
+zoomeye==2.0.4.6.8
