--- a/setting/config.json
+++ b/setting/config.json
@@ -1,6 +1,6 @@
 {
-    "fofa_email": "xuedongyuming2233@gmail.com",
-    "fofa_key": "6ff96fa279eeeefe2fc32ed7e612fbad",
+    "fofa_email": "",
+    "fofa_key": "",
     "zoomeye_key": "",
     "shodan_key": ""
 }
