--- a/setting/config.json
+++ b/setting/config.json
@@ -2,5 +2,6 @@
     "fofa_email": "",
     "fofa_key": "",
     "zoomeye_key": "",
-    "shodan_key": ""
+    "shodan_key": "",
+    "quake_key": ""
 }
